refactor: replace Collectors.toList() with List::toList() for improved readability